@@ -45,6 +45,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       (which is what execv is doing.)
     - unixhelper.{cpp,h}: raise sleeping time to two seconds and grace period
       to 10 seconds.
+    - {unixhelper.{cpp,h},x2goclient.cpp}: switch main cleanup handling to
+      parent PID polling.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
